<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/bg_cart_item"
    android:padding="5dp"
    android:elevation="5dp"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="1dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_height="wrap_content">
    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/productCartImage"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        app:civ_border_width="2dp"
        android:scaleType="centerCrop"
        app:civ_border_color="#CCC8C8"
        app:srcCompat="@drawable/food1"
        android:contentDescription="@string/todo7688j"
        tools:ignore="RedundantNamespace"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:layout_weight="2.5"
        android:layout_marginStart="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/productCartName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/product_name"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/productCartUnitPriceSym"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="11sp"
                android:layout_marginStart="5dp"
                android:text="@string/rs"/>
            <TextView
                android:id="@+id/productCartUnitPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="12sp"
                android:layout_marginStart="5dp"
                android:text="@string/_105"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/decrementButtoncart"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="#E3E0E0"
                android:text="@string/minus"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/counterTextViewcart"
                android:layout_width="22dp"
                android:layout_height="match_parent"
                android:backgroundTint="#E3E0E0"
                android:gravity="center"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:textSize="15sp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/incrementButtoncart"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="#E3E0E0"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:padding="3dp"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_price"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:text="@string/rs12"/>
        <TextView
            android:id="@+id/cartTotalProductPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/_5025"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/cartProductDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/todosdfsd"
        android:padding="2dp"
        android:layout_weight="1"
        app:srcCompat="@android:drawable/ic_menu_delete"
        tools:ignore="ImageContrastCheck">

    </ImageView>

</LinearLayout>