<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/loginBg"
    tools:context=".SignUpActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="48dp"
                android:gravity="center"
                android:text="@string/create_naccount"
                android:textColor="@color/logWelcome"
                android:textSize="36sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profileImage"
                android:layout_width="96dp"
                android:layout_gravity="center"
                android:layout_height="96dp"
                android:src="@drawable/userplaceholder"
                app:civ_border_width="2dp"
                android:layout_marginBottom="32dp"
                app:civ_border_color="#CCC8C8"
                tools:ignore="RedundantNamespace" />

    <EditText
        android:id="@+id/RegName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/logedittxtbg"
        android:drawableStart="@drawable/name"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="@color/hintcolorlogin"
        android:textColorHint="@color/hintcolorlogin"
        android:textSize="18sp"
        tools:ignore="Autofill,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/RegEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/logedittxtbg"
        android:drawableStart="@drawable/email"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/hintcolorlogin"
        android:textColorHint="@color/hintcolorlogin"
        android:textSize="18sp"
        tools:ignore="Autofill,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <EditText
        android:id="@+id/RegPass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/logedittxtbg"
        android:drawableStart="@drawable/password"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/hintcolorlogin"
        android:textColorHint="@color/hintcolorlogin"
        android:textSize="18sp"
        tools:ignore="Autofill,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/RegConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/logedittxtbg"
                android:drawableStart="@drawable/password"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/hintcolorlogin"
                android:textColorHint="@color/hintcolorlogin"
                android:textSize="18sp"
                tools:ignore="Autofill,TouchTargetSizeCheck,VisualLintTextFieldSize" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="2dp"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">
    <ImageView
        android:id="@+id/RegImgBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:srcCompat="@drawable/btn_arraw1"
        tools:ignore="ContentDescription" />
    </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonfb"
                    style="@android:style/Widget.Button"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/btnbg"
                    android:drawableEnd="@drawable/facebook"
                    android:padding="8dp"
                    android:text="@string/facebook"
                    android:textColor="#3b608c"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonGgl"
                    style="@android:style/Widget.Button"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/btnbg"
                    android:drawableEnd="@drawable/google"
                    android:padding="8dp"
                    android:text="@string/google"
                    android:textColor="#3b608c"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />

            </LinearLayout>

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/already_have_account_login"
        android:textColor="@color/logWelcome"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>